Closed Bug 371042 Opened 19 years ago Closed 18 years ago

[FIX]Computed max-height/width should not include min-height/width, but height/width should

Categories

(Core :: DOM: CSS Object Model, defect, P3)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha5

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

See bug 365932 comment 3. DOM computed max-height should not depend on min-height, and computed height should. Same for widths. I'll write some tests as I go along, I guess.
Attached patch Like soSplinter Review
Attachment #262473 - Flags: superreview?(dbaron)
Attachment #262473 - Flags: review?(dbaron)
Priority: -- → P3
Summary: Computed max-height/width should not include min-height/width, but height/width should → [FIX]Computed max-height/width should not include min-height/width, but height/width should
Target Milestone: mozilla1.9alpha3 → mozilla1.9alpha4
Comment on attachment 262473 [details] [diff] [review] Like so r+sr=dbaron
Attachment #262473 - Flags: superreview?(dbaron)
Attachment #262473 - Flags: superreview+
Attachment #262473 - Flags: review?(dbaron)
Attachment #262473 - Flags: review+
Fixed.
Flags: in-testsuite+
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: mozilla1.9alpha4 → mozilla1.9alpha5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: