min-width/height should not affect computed max-width or max-height.  Both ofthem should affect computed width and height, though.  Bug 371042, r+sr=dbaron